add username & password for spring-boot-actuator remove unused file schema.sql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.thymeleaf.cache: false
 security.basic.enabled: false
 # demo only:
-security.user.password: password
+security.user.name: foo
+security.user.password: bar
 logging.level.org.springframework.security: INFO
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
