Added: logging filter Added: session create destroy monitor Changed: loggin authorities in secured contents

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ security.user.name: foo
 security.user.password: bar
 logging.level.org.springframework.security: INFO
 logging.level.org.springframework.boot.actuate.audit.listener.AuditListener: DEBUG
+
+server.session.cookie.name: XXX_SESSIONID
+server.session.timeout: 60
