--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,12 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-web')
     compile('org.springframework.boot:spring-boot-starter-actuator')
+    compile('org.thymeleaf.extras:thymeleaf-extras-springsecurity4')
     runtime('org.springframework.boot:spring-boot-devtools')
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
+
+
+    compile 'io.springfox:springfox-swagger2:2.7.+'
+    compile 'io.springfox:springfox-swagger-ui:2.7.+'
 }
