--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     testCompile('org.springframework.security:spring-security-test')
 
+    compile 'org.webjars:bootstrap:2.3.2'
+    compile 'org.webjars:webjars-locator:0.30'
+
     compile 'io.springfox:springfox-swagger2:2.7.+'
     compile 'io.springfox:springfox-swagger-ui:2.7.+'
 }
